--- a/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
+++ b/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Version>1.1.0</Version>
+    <RepositoryUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>puppeteer-extra recaptcha browser-automation browser-extension browser puppeteer netcore netcore31 stealth-client browser-testing c#</PackageTags>
+    <PackageProjectUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +16,7 @@
     <None Remove="Plugins\ExtraStealth\Scripts\Codec.js" />
     <None Remove="Plugins\ExtraStealth\Scripts\Frame.js" />
     <None Remove="Plugins\ExtraStealth\Scripts\Language.js" />
+    <None Remove="Plugins\ExtraStealth\Scripts\LoadTimes.js" />
     <None Remove="Plugins\ExtraStealth\Scripts\Outdimensions.js" />
     <None Remove="Plugins\ExtraStealth\Scripts\Permissions.js" />
     <None Remove="Plugins\ExtraStealth\Scripts\Plugin.js" />
@@ -28,6 +35,7 @@
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Codec.js" />
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Frame.js" />
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Language.js" />
+    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\LoadTimes.js" />
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Outdimensions.js" />
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Permissions.js" />
     <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Plugin.js" />
