Add contentWindow and sourceUrl evasion to stealth plugin

--- a/Tests/Extra.Tests.csproj
+++ b/Tests/Extra.Tests.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <None Remove="StealthPluginTests\Script\fpCollect.js" />
+    <None Update="StealthPluginTests\EvasionsTests\SourceUrl\fixtures\Test.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
