--- a/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
+++ b/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
@@ -3,13 +3,18 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>1.3.1</Version>
-    <RepositoryUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</RepositoryUrl>
+    <Version>1.4.0</Version>
+    <RepositoryUrl>https://github.com/Takasaki-Studio/Puppeteer-sharp-extra</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>puppeteer-extra recaptcha browser-automation browser-extension browser puppeteer netcore netcore31 stealth-client browser-testing c#</PackageTags>
-    <PackageProjectUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Takasaki-Studio/Puppeteer-sharp-extra</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <UserSecretsId>945328fb-3e7e-4518-99f8-ec578bf688b1</UserSecretsId>
+    <PackageId>TakasakiStudio.PuppeteerExtraSharp</PackageId>
+    <Title>TakasakiStudio.PuppeteerExtraSharp</Title>
+    <Description>A fork of PuppeterExtraSharp to support the newest version of PuppeteerSharp. PuppeteerExtraSharp is a .NET port of the Node.js library, providing useful extensions for Puppeteer.</Description>
+    <Copyright>TakasakiStudio, Overmiind</Copyright>
+    <Authors>TakasakiStudio, PuppeteerExtraSharp</Authors>
   </PropertyGroup>
 
   <ItemGroup>
