--- a/.github/workflows/dotnet8.yml
+++ b/.github/workflows/dotnet8.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [ "master" ]
 
+defaults:
+  run:
+    working-directory: ./PuppeteerExtraSharp
+
 jobs:
   build:
     strategy:
