--- a/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
+++ b/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
@@ -3,13 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Version>1.3.1</Version>
-    <RepositoryUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</RepositoryUrl>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>puppeteer-extra recaptcha browser-automation browser-extension browser puppeteer netcore netcore31 stealth-client browser-testing c#</PackageTags>
-    <PackageProjectUrl>https://github.com/Overmiind/Puppeteer-sharp-extra</PackageProjectUrl>
+    <PackageTags>puppeteer-extra recaptcha browser-automation browser-extension browser puppeteer netcore stealth-client browser-testing c#</PackageTags>
+    <PackageProjectUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <UserSecretsId>945328fb-3e7e-4518-99f8-ec578bf688b1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
