--- a/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
+++ b/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,46 +11,6 @@
     <PackageProjectUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Plugins\ExtraStealth\Scripts\ChromeApp.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Codec.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Frame.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\HardwareConcurrency.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Language.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\LoadTimes.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Outdimensions.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Permissions.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Plugin.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Runtime.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\SCI.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Stacktrace.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Utils.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\Vendor.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\WebDriver.js" />
-    <None Remove="Plugins\ExtraStealth\Scripts\WebGL.js" />
-    <None Remove="Plugins\Recaptcha\Scripts\EnterRecaptchaCallBackScript.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\ChromeApp.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Codec.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\HardwareConcurrency.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Language.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\LoadTimes.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Outdimensions.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Permissions.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Plugin.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Runtime.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\SCI.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Stacktrace.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Utils.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\Vendor.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\WebDriver.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\WebGL.js" />
-    <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\ContentWindow.js" />
-    <EmbeddedResource Include="Plugins\Recaptcha\Scripts\EnterRecaptchaCallBackScript.js" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
