--- a/tests/PuppeteerExtraSharpLite.Tests/PuppeteerExtraSharpLite.Tests.csproj
+++ b/tests/PuppeteerExtraSharpLite.Tests/PuppeteerExtraSharpLite.Tests.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit.v3" Version="3.0.0" />
     <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
