--- a/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
+++ b/src/PuppeteerExtraSharpLite/PuppeteerExtraSharpLite.csproj
@@ -2,15 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <IsAotCompatible>true</IsAotCompatible>
     <LangVersion>latest</LangVersion>
     <Version>1.0.0</Version>
-    <RepositoryUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>puppeteer-extra recaptcha browser-automation browser-extension browser puppeteer netcore stealth-client browser-testing c#</PackageTags>
-    <PackageProjectUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Nullable>enable</Nullable>
+
+    <IsAotCompatible>true</IsAotCompatible>
+    <IsTrimmable>true</IsTrimmable>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>David Shnayder</Authors>
+    <Copyright>David Shnayder</Copyright>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+
+    <PackageId>PuppeteerExtraSharpLite</PackageId>
+    <Title>PuppeteerExtraSharpLite</Title>
+    <Description>A lightweight AOT friendly plugin supporting abstraction for PuppeteerSharp</Description>
+    <PackageProjectUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/dusrdev/PuppeteerExtraSharpLite</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>Puppeteer;CSharp;Plugins;Evasion;Stealth;Detect</PackageTags>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup>
