--- a/tests/PuppeteerSharpToolkit.Tests/PuppeteerSharpToolkit.Tests.csproj
+++ b/tests/PuppeteerSharpToolkit.Tests/PuppeteerSharpToolkit.Tests.csproj
@@ -32,6 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PuppeteerExtraSharpLite\PuppeteerExtraSharpLite.csproj" />
+    <ProjectReference Include="..\..\src\PuppeteerSharpToolkit\PuppeteerSharpToolkit.csproj" />
   </ItemGroup>
 </Project>
