--- a/tests/PuppeteerSharpToolkit.Tests/PuppeteerSharpToolkit.Tests.csproj
+++ b/tests/PuppeteerSharpToolkit.Tests/PuppeteerSharpToolkit.Tests.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
         <OutputType>Exe</OutputType>
         <RootNamespace>PuppeteerSharpToolkit.Tests</RootNamespace>
         <AssemblyName>PuppeteerSharpToolkit.Tests</AssemblyName>
@@ -22,7 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
         <PackageReference Include="xunit.v3" Version="3.0.0" />
         <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
