Add CAPTCHA solving plugin with CapSolver integration
- Introduced `CaptchaSolverPlugin` to handle various CAPTCHA solving scenarios.
- Implemented `CapSolver` as a provider for solving reCAPTCHAs, with support for V2 and V3.
- Added models, enums, and helper methods for better CAPTCHA management.
- Included support for configurable options like timeouts and polling attempts.
- Provided initial integration scripts for Google reCAPTCHA handling.

--- a/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
+++ b/PuppeteerExtraSharp/PuppeteerExtraSharp.csproj
@@ -60,6 +60,7 @@
         <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\WebGL.js"/>
         <EmbeddedResource Include="Plugins\ExtraStealth\Scripts\ContentWindow.js"/>
         <EmbeddedResource Include="Plugins\Recaptcha\Scripts\RecaptchaScript.js" />
+        <EmbeddedResource Include="Plugins\CaptchaSolver\Vendors\**\*.js" />
     </ItemGroup>
 
     <ItemGroup>
